--- a/movie-website-master/index.html
+++ b/movie-website-master/index.html
@@ -27,7 +27,8 @@
                     <li class="menu-list-item">Reviews</li>
                     <li class="menu-list-item">Awards</li>
                     <li class="menu-list-item">Merchandise</li>
-                    <a href="singup.html"><li class="menu-list-item" >Login</li></a>
+                    <li class="menu-list-item" > <a class="men-list-item1"href="login.html"> Login</a> </li>
+                        <a href="singup.html"><li class="menu-list-item" >Signup</li></a>
                     <a href="Search.html"><li class="menu-list-item" >Search</li></a>
 
                 </ul>
