--- a/movie-website-master/singup.html
+++ b/movie-website-master/singup.html
@@ -2,13 +2,13 @@
   <head>
     <meta charset="utf-8">
     <title>Form</title>
-    <link href="style2.css" type="text/css" rel="stylesheet">
+    <link href="./style2.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- Body of Form starts -->
   	<div class="container">
-      <form method="post" autocomplete="on">
+      <form method="post" autocomplete="on" action="reg_action">
         <!--First name-->
     		<div class="box">
           <label for="firstName" class="fl fontLabel"> First Name: </label>
